--- a/config.json
+++ b/config.json
@@ -7,9 +7,16 @@
       "error": "#e74c3c",
       "background": "#f5f5f5",
       "text": "#333333"
-    }
+    },
+    "timeout": "30",
+    "opacity": "0.95"
   },
   "encryption": {
-    "key_autosave": false
+    "key_autosave": false,
+    "key_length": "256"
+  },
+  "logging": {
+    "enabled": true,
+    "level": "debug"
   }
 }
