--- a/config.json
+++ b/config.json
@@ -1,22 +1,15 @@
-{
-  "ui": {
-    "language": "uk",
-    "colors": {
-      "primary": "#3498db",
-      "secondary": "#2ecc71",
-      "error": "#e74c3c",
-      "background": "#f5f5f5",
-      "text": "#333333"
+  {
+    "ui": {
+      "language": "uk",
+      "colors": {
+        "primary": "#3498db",
+        "secondary": "#2ecc71",
+        "error": "#e74c3c",
+        "background": "#f5f5f5",
+        "text": "#333333"
+      }
     },
-    "timeout": "30",
-    "opacity": "0.95"
-  },
-  "encryption": {
-    "key_autosave": false,
-    "key_length": "256"
-  },
-  "logging": {
-    "enabled": true,
-    "level": "debug"
+    "encryption": {
+      "key_autosave": false
+    }
   }
-}
