ELE ELE all the encryptions works on 100%

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "ui": {
-    "language": "ru",
+    "language": "uk",
     "colors": {
       "primary": "#3498db",
       "secondary": "#2ecc71",
